2016-01-26  Liu Xin  <meteor1113@qq.com>

	* init/init-package.el (fci-dash-pattern): Config fci-mode and whitespace.

2016-01-25  Liu Xin  <meteor1113@qq.com>

	* init/init-package.el: Disable symon-mode default.

	* init/modules/init-toolbar.el: Update toolbar menu.

2016-01-24  Liu Xin  <meteor1113@qq.com>

	* init/init-package.el: Add package minimap.
	(after-init-hook): Add package symon.
	(after-init-hook): Add package aggressive-indent.

	* init/progmodes/init-gdb.el: Split init-cc to init-cc and init-gdb.

	* init/init-package.el (after-init-hook): Add pacage smex.

2016-01-23  Liu Xin  <meteor1113@qq.com>

	* init/init-package.el: Add package anzu.

2016-01-20  Liu Xin  <meteor1113@qq.com>

	* init/init-editor.el: Keep desktop-load-locked-desktop to 'ask.

	* init.el: Don't server-start automatic.

2016-01-19  Liu Xin  <meteor1113@qq.com>

	* init/modules/init-cedet.el (featurep): Fix called-interactively-p.

	* init.el: Add 'noerror for require.

	* init/modules/init-highlight.el (after-init-hook): Setting for volatile-highlights.

	* init/modules/init-tabbar.el: Update tabbar setting for tabbar-ruler-20160115.923

	* init/textmodes/init-org.el ("org"): Fix for yasnippet.

2016-01-09  Liu Xin  <meteor1113@qq.com>

	* init/progmodes/init-haskell.el: Add init-haskell.

	* init/modules/init-toolbar.el: Remove flycheck-clear.xpm

2015-12-31  Liu Xin  <meteor1113@qq.com>

	* init/modules/init-toolbar.el: Set toolbar for flycheck.

	* init/modules/init-flymake.el: Remove flymake.

	* init/modules/init-flycheck.el: Add flycheck.

2015-12-30  Liu Xin  <meteor1113@qq.com>

	* init/modules/init-toolbar.el: Remove recent-jump toolbar.

	* init/modules/init-helm.el: Add helm.

	* init/modules/init-toolbar.el (toggle-toolbar-menu): Refactor init-toolbar.

2015-12-28  Liu Xin  <meteor1113@qq.com>

	* init.el: Refactor.

	* init/init-editor.el: Remove htmlize.
	Remove cursor-chg.
	Remove recent-jump.

	* init.el: Split dotemacs.
	Refactor.
