@@ -1,5 +1,7 @@
 2016-01-26  Liu Xin  <meteor1113@qq.com>
 
+	* init/modules/init-flycheck.el: Disable global-flycheck-mode default.
+
 	* init/init-package.el (fci-dash-pattern): Config fci-mode and whitespace.
 
 2016-01-25  Liu Xin  <meteor1113@qq.com>
